[gd_scene load_steps=4 format=3 uid="uid://b4u4mfxgxuiww"]

[ext_resource type="Theme" uid="uid://dhscfud6g63em" path="res://main_theme.tres" id="1_e3ylf"]
[ext_resource type="Script" path="res://main.gd" id="1_qhqwn"]
[ext_resource type="PackedScene" uid="uid://df1h5b2xh45k6" path="res://list_item.tscn" id="4_g670f"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e3ylf")
script = ExtResource("1_qhqwn")

[node name="list_side" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="list_side"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.117647, 0.141176, 1)

[node name="HSeparator" type="HSeparator" parent="list_side"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.0
offset_top = 88.0
offset_right = 132.0
offset_bottom = 96.0
grow_horizontal = 2

[node name="MORE" type="Button" parent="list_side"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.401929
anchor_top = 0.0469484
anchor_right = 0.615929
anchor_bottom = 0.0829484
offset_left = -4.064
offset_right = 4.06398
offset_bottom = 0.327998
grow_horizontal = 2
text = "ADD TO LIST"
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0357143
anchor_top = 0.140845
anchor_right = 0.964
anchor_bottom = 0.957404
offset_right = 0.127979
offset_bottom = 0.291963
horizontal_scroll_mode = 0
metadata/_edit_use_anchors_ = true

[node name="list_container" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" parent="ScrollContainer/list_container" instance=ExtResource("4_g670f")]
layout_mode = 2

[node name="PanelContainer2" parent="ScrollContainer/list_container" instance=ExtResource("4_g670f")]
layout_mode = 2

[node name="PanelContainer3" parent="ScrollContainer/list_container" instance=ExtResource("4_g670f")]
layout_mode = 2

[connection signal="pressed" from="list_side/MORE" to="." method="_on_more_pressed"]
